@@ -1,0 +1,6 @@
+package Fail;
+
+use strict;
+use warnings;
+
+intentional syntax error goes here;
