@@ -1,0 +1,8 @@
+package LoadTests::Success;
+
+use strict;
+use warnings;
+
+use Fail;
+
+1;
